fix bug: z-index menu / background sur les input login et signup / JWT expiration

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -7,6 +7,7 @@
   height: calc(100% - 60px);
   border-right: 1px solid #2a2a2a;
   transition-duration: 0.3s;
+  z-index: 10;
   .menu-item {
     display: flex;
     flex-direction: row;
