--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -19,7 +19,7 @@
       margin-bottom: 16px;
       border: 2px solid white;
       border-radius: 12px;
-
+      background-color: #f2f2f2;
       input {
         background-color: #f2f2f2;
       }
